Fix Netlify Functions deploy/discovery (publish/functions dirs + /api redirects)

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,11 @@
   publish = "."
   functions = "netlify/functions"
 
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
 [[headers]]
   for = "/*"
   [headers.values]
