--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "description": "ZachFitApp - lightweight fitness coaching app",
   "dependencies": {
-    "ajv": "^8.12.0",
-    "pg": "^8.13.1"
+    "ajv": "8.12.0",
+    "pg": "8.13.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
