--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,8 @@
 [build]
-  publish = "."
+  publish = "public"
   functions = "netlify/functions"
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Cache-Control = "no-store"
-
-[build.environment]
-  NODE_VERSION = "20"
