--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "zach-fit-app",
+  "name": "fit-hub",
   "version": "1.0.0",
+  "description": "Fit Hub leader dashboard",
   "private": true,
-  "description": "ZachFitApp - lightweight fitness coaching app",
-  "dependencies": {
-    "ajv": "8.12.0",
-    "pg": "8.13.1"
+  "scripts": {
+    "dev": "npx serve public"
   },
-  "engines": {
-    "node": "20.x"
+  "dependencies": {
+    "pg": "^8.13.1"
   }
 }
