--- a/netlify.toml
+++ b/netlify.toml
@@ -1,44 +1,24 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
-
-[build.environment]
-  NODE_ENV = "development"
-  NPM_FLAGS = "--include=dev"
-
-[[redirects]]
-  from = "/api/me"
-  to = "/.netlify/functions/me"
-  status = 200
-
-[[redirects]]
-  from = "/api/today"
-  to = "/.netlify/functions/today"
-  status = 200
-
-[[redirects]]
-  from = "/api/workout/log"
-  to = "/.netlify/functions/workout_log"
-  status = 200
-
-[[redirects]]
-  from = "/api/onboarding/program/generate"
-  to = "/.netlify/functions/onboarding_generate"
-  status = 200
-
-[[redirects]]
-  from = "/api/progress"
-  to = "/.netlify/functions/progress"
-  status = 200
-
-[[redirects]]
-  from = "/api/history"
-  to = "/.netlify/functions/history"
-  status = 200
+  command = "echo \"No build step\"" 
+  publish = "."
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/api"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+[functions."scheduled-reconcile-subscriptions"]
+  schedule = "0 * * * *"
+
+[[redirects]]
+  from = "/privacy"
+  to = "/privacy.html"
+  status = 200
+
+[[redirects]]
+  from = "/delete-account"
+  to = "/delete-account.html"
   status = 200
 
 [[redirects]]
